--- a/frontend-bar/src/app/components/landing/footer/footer.component.html
+++ b/frontend-bar/src/app/components/landing/footer/footer.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="logo">
             <div class="img">
-               <a href="/login"><img src="../../../../assets/img/LOGO BAR/bran2-02.png" alt=""></a> 
+               <a routerLink="/login"><img src="../../../../assets/img/LOGO BAR/bran2-02.png" alt=""></a> 
             </div>
         </div>
     </div>
