--- a/frontend-bar/src/app/components/landing/land-nav/land-nav.component.html
+++ b/frontend-bar/src/app/components/landing/land-nav/land-nav.component.html
@@ -13,7 +13,7 @@
         <fa-icon [icon]="iconMenu" id="menu_hamb"></fa-icon>
     </div>
     <div class="logo_nav">
-        <a href="/hollowbar-initial/client"><img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt="Logo"></a>
+        <a routerLink="/hollowbar-initial/client"><img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt="Logo"></a>
     </div>
    
 </nav>
