--- a/frontend-bar/src/app/components/landing/structure/structure.component.html
+++ b/frontend-bar/src/app/components/landing/structure/structure.component.html
@@ -41,7 +41,7 @@
       <p>Cerveza | Poker</p>
     </div>
     <div class="value_product">
-      <p>Desde: 3500</p>
+      <p>Desde: $3500</p>
     </div>
   </div>
   <div class="list_products" class="list_products">
@@ -52,7 +52,7 @@
       <p>Ron | Caldas</p>
     </div>
     <div class="value_product">
-      <p>Desde: 100000</p>
+      <p>Desde: $100000</p>
     </div>
   </div>
   <div class="list_products" class="list_products">
@@ -63,7 +63,7 @@
       <p>Coctel</p>
     </div>
     <div class="value_product">
-      <p>Desde: 25000</p>
+      <p>Desde: $25000</p>
     </div>
   </div>
   <div class="list_products" class="list_products">
@@ -74,7 +74,7 @@
       <p>Cerveza | Heineken</p>
     </div>
     <div class="value_product">
-      <p>Desde: 3500</p>
+      <p>Desde: $3500</p>
     </div>
   </div>
   <div class="list_products" class="list_products">
@@ -85,7 +85,7 @@
       <p>Cerveza | Budweiser</p>
     </div>
     <div class="value_product">
-      <p>Desde: 4000</p>
+      <p>Desde: $4000</p>
     </div>
   </div>
   <div class="list_products" class="list_products">
@@ -96,7 +96,7 @@
       <p>Aguardiente | Antioqueño</p>
     </div>
     <div class="value_product">
-      <p>Desde: 50000</p>
+      <p>Desde: $50000</p>
     </div>
   </div>
 
