--- a/frontend-bar/src/app/components/order-products/list-orderproduct-employee/list-orderproduct-employee.component.html
+++ b/frontend-bar/src/app/components/order-products/list-orderproduct-employee/list-orderproduct-employee.component.html
@@ -2,21 +2,17 @@
 
 <div class="containerOrderProduct">
   <section class="left_form">
-    <h1>{{ "askFor" | translate }}</h1>
+    <h1>{{ "request" | translate }}</h1>
     <form [formGroup]="form" (ngSubmit)="addProductOrder()">
       <!-- Product Select -->
       <mat-form-field>
-        <mat-label>Seleccionar producto</mat-label>
+        <mat-label>{{ "selectProduct" | translate }}</mat-label>
         <mat-select formControlName="id_product" (selectionChange)="onSelectionChange($event)" (closed)="onClosed()">
           <input #productInput (keyup)="onKey($event)" matInput placeholder="{{ 'filter' | translate }}">
           <mat-option *ngFor="let product of filteredProducts" [value]="product.id">{{ product.name_product
             }}</mat-option>
         </mat-select>
       </mat-form-field>
-      <div class="error">
-        <mat-error *ngIf="form.get('id_product')?.hasError('required') && form.get('id_product')?.touched">{{
-          "requiredStatus" | translate }}</mat-error>
-      </div>
       <div class="container_data">
         <div class="left_img">
           <!-- Image Product Img -->
@@ -45,16 +41,11 @@
             <mat-label>{{ "stock" | translate }}</mat-label>
             <input type="number" matInput placeholder="0" min="0" formControlName="count">
           </mat-form-field>
-          <div class="error">
-            <mat-error *ngIf="form.get('count')?.hasError('required') && form.get('count')?.touched">{{ "requiredStatus"
-              |
-              translate }}</mat-error>
-          </div>
         </div>
       </div>
 
       <mat-dialog-actions align="end">
-        <button type="submit" [disabled]="form.invalid" mat-button color="primary" class="buttonAdd">Agregar</button>
+        <button type="submit" [disabled]="form.invalid" mat-button color="primary" class="buttonAdd">{{ "add" | translate }}</button>
       </mat-dialog-actions>
     </form>
   </section>
@@ -72,25 +63,25 @@
 
         <!-- Name Product Column -->
         <ng-container matColumnDef="name_product">
-          <th mat-header-cell *matHeaderCellDef>nombre producto</th>
+          <th mat-header-cell *matHeaderCellDef>{{ "nameProduct" | translate }}</th>
           <td mat-cell *matCellDef="let element">{{ element.name_product }}</td>
         </ng-container>
 
         <!-- Count Column -->
         <ng-container matColumnDef="count">
-          <th mat-header-cell *matHeaderCellDef>cantidad</th>
+          <th mat-header-cell *matHeaderCellDef>{{ "stock" | translate }}</th>
           <td mat-cell *matCellDef="let element">{{ element.count }}</td>
         </ng-container>
 
         <!-- Price Column -->
         <ng-container matColumnDef="price">
-          <th mat-header-cell *matHeaderCellDef>precio</th>
+          <th mat-header-cell *matHeaderCellDef>{{ "price" | translate }}</th>
           <td mat-cell *matCellDef="let element">{{ element.price }} x und</td>
         </ng-container>
 
         <!-- Total Column -->
         <ng-container matColumnDef="subtotal">
-          <th mat-header-cell *matHeaderCellDef>sub total</th>
+          <th mat-header-cell *matHeaderCellDef>{{ "subTotal" | translate }}</th>
           <td mat-cell *matCellDef="let element">{{ element.total }}</td>
         </ng-container>
 
