--- a/frontend-bar/src/app/components/navbar/navbar.component.css
+++ b/frontend-bar/src/app/components/navbar/navbar.component.css
@@ -95,9 +95,9 @@
   .en:focus {
     text-decoration: underline;
   }
-  .option_container_menu {
+  /* .option_container_menu {
     display: none;
-  }
+  } */
   .menu_hamburguer {
     display: none;
   }
@@ -116,7 +116,7 @@
       gap: 50%;
       width: 100% !important;
     }
-    .show {
+    .option_container_menu {
       display: block;
       background-color: #390708;
       flex-direction: column;
@@ -184,7 +184,7 @@
       gap: 50%;
       width: 100% !important;
     }
-    .show {
+    .option_container_menu {
       display: block;
       background-color: #390708;
       flex-direction: column;
@@ -252,7 +252,7 @@
       gap: 50%;
       width: 100% !important;
     }
-    .show {
+    .option_container_menu {
       display: block;
       background-color: #390708;
       flex-direction: column;
