--- a/frontend-bar/src/app/components/navbar/navbar.component.html
+++ b/frontend-bar/src/app/components/navbar/navbar.component.html
@@ -13,13 +13,13 @@
         <button (click)="en()" class="en">EN</button>
     </div>
     <div class="menu_hamburguer">
-        <fa-icon [icon]="iconMenu" id="manu_hamb"></fa-icon>
-    </div>
+        <fa-icon [icon]="iconMenu" id="manu_hamb" class="manu_hamb" (click)="toggleMenu()"></fa-icon>
+      </div>
     <div class="logo_nav">
         <a routerLink="/hollowbar-initial/client"><img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt="Logo"></a>
     </div>
 </nav>
-<div class="option_container_menu">
+<div class="option_container_menu" *ngIf="isMenuOpen">
     <a routerLink="/chart">{{ "home" | translate }}</a>
     <a routerLink="/users">{{ "users" | translate }}</a>
     <a routerLink="/events">{{ "events" | translate }}</a>
